--- a/assets/views/dashboard.html
+++ b/assets/views/dashboard.html
@@ -2,9 +2,11 @@
 <div class="grid grid-cols-1 gap-6">
     <div class="bg-white p-4 rounded-lg border" style="padding-bottom: 31px;">
         <h4 class="font-semibold mb-2">Avisos</h4>
+        <p>Compras:</p>
         <p>1. Expedientes sin precio final - sin gastos imputados en las hojas de seguimiento (diario, activado).</p>
-        <p>2. Los albaranes de entrada del almacén 98 no coinciden con los albaranes de compra de los almacenes 00, 01, 02, E01, E02, E03, E04, E05, E06 y 25 (diario, activado).</p>
-        <p>3. Paletas que se quedan en producción - almacén 90, código entrada PRODUCCION, tipo situación CALID (diario, activado).</p>
+        <p>Logística:</p>
+        <p>1. Los albaranes de entrada del almacén 98 no coinciden con los albaranes de compra de los almacenes 00, 01, 02, E01, E02, E03, E04, E05, E06 y 25 (diario, activado).</p>
+        <p>2. Paletas que se quedan en producción - almacén 90, código entrada PRODUCCION, tipo situación CALID (diario, activado).</p>
     </div>
 </div>
 <br>
