--- a/assets/views/dashboard.html
+++ b/assets/views/dashboard.html
@@ -44,7 +44,7 @@
     <div class="bg-white p-4 rounded-lg border">
         <h4 class="font-semibold mb-2">Monthly Sales</h4>
         <canvas id="barChart"></canvas>
-    </div>
+    </div>9ijn8uh
     <div class="bg-white p-4 rounded-lg border">
         <h4 class="font-semibold mb-2">Statistics</h4>
         <canvas id="lineChart"></canvas>
