--- a/assets/views/logistica-listado-cargas.html
+++ b/assets/views/logistica-listado-cargas.html
@@ -1,6 +1,6 @@
 <div class="w-full mx-auto mb-4 flex justify-between items-center">
     <span></span>
-    <h1 class="text-xl text-center">Listado de últimas cargas</h1>
+    <h1 class="text-xl text-center">Listado de últimas cargas Nacional</h1>
     <span></span>
 </div>
 <div class="flex flex-col gap-2 text-sm w-full">
