--- a/assets/views/produccion-comparacion-costes-contabilidad.html
+++ b/assets/views/produccion-comparacion-costes-contabilidad.html
@@ -38,7 +38,7 @@
                     <th>Fecha Cierre</th>
                     <th>Kg</th>
                     <th>Coste Producción (indirecto y mano de obra)</th>
-                    <th>Coste Contabilidad</th>
+                    <th>Importe coste movimientos</th>
                     <th class="topRight">Diferencia</th>
                 </tr>
             </thead>
