--- a/assets/views/logistica-detalle-carga-regional.html
+++ b/assets/views/logistica-detalle-carga-regional.html
@@ -8,7 +8,8 @@
         <table class="w-ful styled-table-fh stycky-table">
             <thead>
                 <tr class="twcolor">
-                    <th class="topLeft">Número</th>
+                    <th class="topLeft">Fecha</th>
+                    <th>Número</th>
                     <th>Artículo</th>
                     <th>Preparado Kg</th>
                     <th>Pedido Kg</th>
