--- a/assets/views/logistica-listado-cargas-regional.html
+++ b/assets/views/logistica-listado-cargas-regional.html
@@ -10,7 +10,9 @@
                 <tr class="twcolor">
                     <th class="topLeft">Fecha</th>
                     <th>Número</th>
-                    <th class="topRight">Conductor</th>
+                    <th>Conductor</th>
+                    <th>Cajas Real</th>
+                    <th class="topRight">Kg Real</th>
                 </tr>
             </thead>
             <tbody id="tableLLCR"></tbody>
