--- a/assets/views/logistica-detalle-carga-regional.html
+++ b/assets/views/logistica-detalle-carga-regional.html
@@ -14,7 +14,10 @@
                     <th>Preparado Kg</th>
                     <th>Pedido Kg</th>
                     <th>Und. pedidas</th>
-                    <th class="topRight">Cajas pedidas</th>
+                    <th>Cajas pedidas</th>
+                    <th>Cajas Real</th>
+                    <th>Kg real</th>
+                    <th class="topRight"></th>
                 </tr>
             </thead>
             <tbody id="tableLDCR"></tbody>
