--- a/assets/views/logistica-detalle-carga-regional.html
+++ b/assets/views/logistica-detalle-carga-regional.html
@@ -16,7 +16,7 @@
                     <th>Und. pedidas</th>
                     <th>Cajas pedidas</th>
                     <th>Cajas Real</th>
-                    <th>Kg real</th>
+                    <th>Kg Real</th>
                     <th class="topRight"></th>
                 </tr>
             </thead>
