--- a/assets/views/logistica-detalle-carga-regional.html
+++ b/assets/views/logistica-detalle-carga-regional.html
@@ -11,6 +11,7 @@
                     <th class="topLeft">Fecha</th>
                     <th>Número</th>
                     <th>Artículo</th>
+                    <th>Cliente</th>
                     <th>Preparado Kg</th>
                     <th>Pedido Kg</th>
                     <th>Und. pedidas</th>
