--- a/assets/views/dashboard.html
+++ b/assets/views/dashboard.html
@@ -4,7 +4,7 @@
         <h4 class="font-semibold mb-2">Avisos</h4>
         
         <p class="mt-2">Calidad:</p>
-        <p class="ml-4">1. Aviso sobre artículos que no están en recetas de ofs pero sí en producción. (instantáneo, activado).</p>
+        <p class="ml-4">1. Aviso sobre artículos que no están en recetas de ofs pero sí en producción (instantáneo, activado).</p>
         
         <p class="mt-2">Compras:</p>
         <p class="ml-4">1. Expedientes sin precio final - sin gastos imputados en las hojas de seguimiento (diario, activado).</p>
@@ -25,7 +25,7 @@
     </div>
 </div>
 <br>
-<!-- Cards 
+<!-- Cards prf_preparacion_tarea
 <div class="grid grid-cols-12 gap-6">
     <div class="col-span-12 md:col-span-1 bg-white p-4 rounded-lg border">
         <p class="text-gray-500">Customers</p>
