--- a/assets/views/expedientes-albaranes-facturas.html
+++ b/assets/views/expedientes-albaranes-facturas.html
@@ -8,3 +8,6 @@
 <div id="expedientes_content" class="flex flex-col gap-2 text-sm w-full">
     <div class="bg-white p-2 border">Cargando el contenido..</div>
 </div>
+<div style="margin-top: 777px;">
+    <p>El informe está filtrado por albaranes facturados entre fechas (ultimo cambio pedido por Marisol).</p>
+</div>
