--- a/assets/views/finanzas-llegadas-contenedores.html
+++ b/assets/views/finanzas-llegadas-contenedores.html
@@ -1,6 +1,6 @@
 <div class="w-full mx-auto mb-4 flex justify-between items-center">
     <span>
-      <input type="text" value="" class="input-ca input-ca-ba" placeholder="Buscar.." id="searchInputL" oninput="changeSearchedInput(event)">
+      <input type="text" value="" class="input-ca input-ca-ba" placeholder="Buscar.." id="searchInputL" oninput="changeSearchedInputFEC(event)">
       <span  class="b-top-page" onclick="clickBroom()"> 🧹 </span>
     </span>
     <span>Desde <input type="date" id="firstDataInput" onchange="firstDateChange(event)"></span>
@@ -28,7 +28,8 @@
                     <th>Puerto</th>
                     <th>Proveedor</th>
                     <th>Cont.Prov</th>
-                    <th class="topRight">Exp</th>
+                    <th>Exp</th>
+                    <th class="topRight">Buque</th>
                 </tr>
             </thead>
             <tbody id="tableFLC"></tbody>
