--- a/assets/views/logistica-hoja-contenedor.html
+++ b/assets/views/logistica-hoja-contenedor.html
@@ -11,7 +11,8 @@
         <table class="w-ful styled-table-fh stycky-table">
             <thead>
                 <tr class="twcolor">
-                    <th class="topLeft">Fecha de llegada</th>
+                    <th class="topLeft">Llegada a puerto</th>
+                    <th>Descarga en el almacen</th>
                     <th>Numero expediente</th>
                     <th>Numero hoja</th>
                     <th>Contenedor</th>
@@ -28,6 +29,5 @@
 
 <div>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    En esta pantalla se muestran los datos de hojas de seguimiento (expediente) entre fechas que están en situación logística '6-REC RECEPCION ALMACEN'.
-
+    En esta pantalla se muestran los datos de hojas de seguimiento (expediente) entre fechas de descarga que están en situación logística '6-REC RECEPCION ALMACEN'.
 </div>
