--- a/assets/views/logistica-hoja-contenedor.html
+++ b/assets/views/logistica-hoja-contenedor.html
@@ -11,10 +11,10 @@
         <table class="w-ful styled-table-fh stycky-table">
             <thead>
                 <tr class="twcolor">
-                    <th class="topLeft">Llegada a puerto</th>
-                    <th>Descarga en el almacen</th>
-                    <th>Numero expediente</th>
-                    <th>Numero hoja</th>
+                    <th class="topLeft">Llegada a Puerto</th>
+                    <th>Descarga en el Almacen</th>
+                    <th>Numero Expediente</th>
+                    <th>Numero Hoja</th>
                     <th>Contenedor</th>
                     <th>Proveedor</th>
                     <th class="topRight">Situación Logística</th>
