--- a/assets/views/produccion-aviso-roturas-stock.html
+++ b/assets/views/produccion-aviso-roturas-stock.html
@@ -14,7 +14,8 @@
                     <th>Stock FINAL</th>
                     <th>DISPG + FINAL</th>
                     <th>Stock de Seguridad</th>
-                    <th class="topRight">Otras situaciones</th>
+                    <th>Otras situaciones</th>
+                    <th class="topRight">Stock en Ped. Compras</th>
                 </tr>
             </thead>
             <tbody id="tablePARS">
