--- a/assets/views/trazabilidad-ordenes-fabricacion.html
+++ b/assets/views/trazabilidad-ordenes-fabricacion.html
@@ -1,6 +1,6 @@
 <div class="w-full mx-auto mb-4 flex justify-between items-center">
     <input type="button" value="<" class="bg-indigo-500 hover:bg-indigo-600 text-white font-bold py-0 px-2 rounded mx-2" onclick="cambiarMes(-1)">
-    <input type="text" placeholder="Buscar artículo, lote" class="input-ca input-ca-ccl" oninput="changeTOF(event)">
+    <input type="text" placeholder="Buscar artículo, lote" class="input-ca input-ca-ccl" oninput="changeTOF(event)" id="inputTOF">
     <h1 id="tituloMes" class="text-xl text-center"></h1>
     <span> </span><span> </span>
     <input type="button" value=">" class="bg-indigo-500 hover:bg-indigo-600 text-white font-bold py-0 px-2 rounded mx-2" onclick="cambiarMes(1)">
