--- a/assets/views/dashboard.html
+++ b/assets/views/dashboard.html
@@ -12,7 +12,9 @@
         <p class="mt-2">Logística:</p>
         <p class="ml-4">1. Los albaranes de entrada del almacén 98 no coinciden con los albaranes de compra de los almacenes 00, 01, 02, E01, E02, E03, E04, E05, E06 y 25 (diario, activado).</p>
         <p class="ml-4">2. Paletas que se quedan en producción - almacén 90, código entrada PRODUCCION, tipo situación CALID (diario, activado).</p>
-        
+
+        <p class="mt-2">Producción:</p>
+        <p class="ml-4">1. Aviso artículos rotura de stock (semanal, activado).</p>
     </div>
 </div>
 <br>
@@ -22,6 +24,7 @@
         <p>1. Cálculo de plazo de cobro de las facturas (diario, activado).</p>
         <p>2. Cálculo de costes en producción (diario, activado).</p>
         <p>3. Cálculo de preció estándar (mensual, activado).</p>
+        <p>4. Consumo artículos equivalentes en producción y venta (diario, activado).</p>
     </div>
 </div>
 <br>
