--- a/assets/views/logistica-cierre-hojas-carga.html
+++ b/assets/views/logistica-cierre-hojas-carga.html
@@ -15,7 +15,7 @@
     <span>
         <select id="stateLCHCId" class="border border-gray-300 rounded-md" onchange="changeState(this.value)">
             <option value="all_states">Todos los estados </option>
-            <option value="Facturado">Facturado</option>
+            <!-- <option value="Facturado">Facturado</option> -->
             <option value="Preparado" selected>Preparado</option>
             <option value="Pendiente">Pendiente</option>
             <option value="Revisar">Revisar</option>
