--- a/assets/views/produccion-aviso-roturas-stock.html
+++ b/assets/views/produccion-aviso-roturas-stock.html
@@ -10,6 +10,7 @@
                 <tr class="twcolor">
                     <th class="topLeft">Código</th>
                     <th>Artículo</th>
+                    <th>Consumo Kg Venta+Prod. LY</th>
                     <th>Stock DISPG</th>
                     <th>Stock FINAL</th>
                     <th>DISPG + FINAL</th>
@@ -45,7 +46,17 @@
 <br>
 <br>
 <br>
+<div>
+DISPG - DISPONIBLE GENERAL <br>
+FINAL - DESTINO FINAL (Contingente - stock solo para consumo en producción) <br>
+DISPG + FINAL (Suma de stock en situación disponible general más stock de destino final) <br>
+Kg Venta+Prod. LY - Kg consumidos el mismo mes el año pasado para un artículo determinado <br>
+Stock de Seguridad - indicado en libra <br><br>
 
+El aviso de rotura de stock llegará cuando: <br>
+1. El stock de seguridad indicado en libra es mayor que el stock en situación DISPG + stock FINAL. <br>
+2. Stock actual (DISPG + FINAL) sea menor que el consumo del año pasado del mes curso.
+</div>
 <!--
 12828864Q
 svoboda2019S.
