--- a/assets/views/produccion-aviso-roturas-stock.html
+++ b/assets/views/produccion-aviso-roturas-stock.html
@@ -10,7 +10,7 @@
                 <tr class="twcolor">
                     <th class="topLeft">Código</th>
                     <th>Artículo</th>
-                    <th>Consumo Kg Venta+Prod. LY</th>
+                    <th>Consumo Venta+Prod. LY</th>
                     <th>Stock DISPG</th>
                     <th>Stock FINAL</th>
                     <th>DISPG + FINAL</th>
