--- a/assets/views/finanzas-llegadas-contenedores.html
+++ b/assets/views/finanzas-llegadas-contenedores.html
@@ -13,7 +13,10 @@
         <table class="w-ful styled-table-fh stycky-table">
             <thead>
                 <tr class="twcolor">
-                    <th class="topLeft">Artículo</th>
+                    <th class="topLeft">Cód. Fam.</th>
+                    <th>Descr. Fam.</th>
+                    <th>Cód. Art.</th>
+                    <th>Descr. Art.</th>
                     <th>C. Ban</th>
                     <th>F. Contrato</th>
                     <th>Cont.</th>
