--- a/assets/views/calidad-productos-msc-asc.html
+++ b/assets/views/calidad-productos-msc-asc.html
@@ -27,7 +27,7 @@
 <br><br><br><br><br><br><br><br><br><br>
 <!-- SEPARADOR -->
 <div class="w-full mt-6 mb-2 text-sm font-semibold text-gray-600">
-    Artículos MSC/ASC evaluados (con o sin ventas)
+    Artículos MSC/ASC evaluados
 </div>
 
 <!-- TABLA ARTÍCULOS EVALUADOS -->
