--- a/assets/views/dashboard.html
+++ b/assets/views/dashboard.html
@@ -8,7 +8,7 @@
         
         <p class="mt-2">Compras:</p>
         <p class="ml-4">1. Expedientes sin precio final - sin gastos imputados en las hojas de seguimiento (diario, activado).</p>
-        <p class="ml-4">2. PENDIENTE comprobacíon de precio (posibilidad de estar fuera de rango) en la entrada de articulos a libra.</p>
+        <p class="ml-4">2. PENDIENTE comprobacíon del precio (posibilidad de estar fuera de rango) en la entrada de artículos a libra.</p>
         
         <p class="mt-2">Logística:</p>
         <p class="ml-4">1. Los albaranes de entrada del almacén 98 no coinciden con los albaranes de compra de los almacenes 00, 01, 02, E01, E02, E03, E04, E05, E06 y 25 (diario, activado).</p>
