--- a/assets/views/compras-rotativo-salidas-elaboracion.html
+++ b/assets/views/compras-rotativo-salidas-elaboracion.html
@@ -29,3 +29,5 @@
         </table>
     </div>
 </div>
+<br><br><br>
+<p>Excluidas las familias  ('001 AUXILIARES', '006 EMBALAJES', '017 GRANELES Y VARIOS ALM 90')</p>
