--- a/assets/views/logistica-analisis-pedido-completo-picking.html
+++ b/assets/views/logistica-analisis-pedido-completo-picking.html
@@ -18,8 +18,12 @@
                     <th>Kg</th>
 
                     <th>Cliente</th>
+                    
                     <th>Pal. Complet.</th>
+                    <th>Complet. Num. Lin.</th>
+
                     <th>Pal. Picking</th>
+                    <th>Picking Num. Lin.</th>
 
                     <th>Num. Referen.</th>
                     <th>Ped. Lineas</th>
