--- a/assets/views/compras-hoja-planificacion-descargas.html
+++ b/assets/views/compras-hoja-planificacion-descargas.html
@@ -10,13 +10,14 @@
         <table class="w-ful styled-table-fh stycky-table">
             <thead>
                 <tr class="twcolor">
-                    <th class="topLeft">Fecha de llegada</th>
+                    <th class="topLeft">F. llegada</th>
                     <th>Nº pedido</th>
                     <th>Proveedor</th>
                     <th>Artículo</th>
                     <th>Kg</th>
                     <th>Transporte</th>
-                    <th class="topRight" id="rpe12">Destino</th>
+                    <th>Destino</th>
+                    <th class="topRight" id="rpe12">Estado</th>
                 </tr>
             </thead>
             <tbody id="tableHPD"></tbody>
