--- a/assets/views/logistica-analisis-pedido-completo-picking.html
+++ b/assets/views/logistica-analisis-pedido-completo-picking.html
@@ -24,6 +24,7 @@
 
                     <th>Pal. Picking</th>
                     <th>Picking Num. Lin.</th>
+                    <th>Picking Cajas</th>
 
                     <th>Num. Referen.</th>
                     <th>Ped. Lineas</th>
