--- a/assets/views/compras-hoja-planificacion-descargas.html
+++ b/assets/views/compras-hoja-planificacion-descargas.html
@@ -14,7 +14,9 @@
                     <th>Nº pedido</th>
                     <th>Proveedor</th>
                     <th>Artículo</th>
-                    <th>Kg</th>
+                    <th>Cantidad</th>
+                    <th>Present.</th>
+                    <th>Precio</th>
                     <th>Transporte</th>
                     <th>Destino</th>
                     <th class="topRight" id="rpe12">Estado</th>
