--- a/assets/views/produccion-ofs-numero-personas.html
+++ b/assets/views/produccion-ofs-numero-personas.html
@@ -1,6 +1,6 @@
 <div class="w-full mx-auto mb-4 flex justify-between items-center">
     <span></span>
-    <h1 class="text-xl text-center">Número de personas en una OF (últimos 22 días)</h1>
+    <h1 class="text-xl text-center">Número de personas en una OF</h1> <!-- (últimos 22 días) -->
     <span></span>
 </div>
 <div class="flex flex-col gap-2 text-sm w-full">
