--- a/assets/css/proyeccion.css
+++ b/assets/css/proyeccion.css
@@ -18,12 +18,13 @@
     src: url('/assets/css/fonts/DS-DIGIT.TTF') format('truetype');
 }
 
+
 #appTime{
     font-family: 'DS-Digital-Bold';
     font-size: 19px;
 }
 
-/* Personalización del scroll */
+/* PersonalizaciÃ³n del scroll */
    #sidebar {
     overflow-y: auto;
     /* activa el scroll vertical */
@@ -103,7 +104,7 @@ td, th, tr{
     font-size: 13px!important;
 }
 .twcolor{
-    background:#4F46E5; color: white
+    background:#055dcf; color: white
 }
 *{
     margin: 0; padding: 0;
@@ -128,21 +129,15 @@ td, th, tr{
 .taleft{
     text-align: left!important;
 }
-.topLeft {
-    border-top-left-radius: 4px;
-}
-.topRight {
-    border-top-right-radius: 4px;
-}
 table{
     border: none;
 }
 li:hover{
     cursor: pointer;
-    background-color: #4F46E5; color: white;
+    background-color: #055dcf; color: white;
 }
 .styled-table-ca thead th {
-        background-color: #4F46E5; 
+        background-color: #055dcf; 
         color: white;
 }
 .styled-table-ca {
@@ -152,15 +147,9 @@ li:hover{
 .styled-table-ca th, .styled-table-ca td {
     padding: 1px 4px;
 }
-.styled-table-ca tbody tr:hover {
-    background-color: rgb(197, 255, 197)!important;
-}
-.styled-table-ca tbody tr:nth-of-type(even) {
-    background-color: rgb(238, 251, 238);
-}
 
 .styled-table-fh thead th {
-        background-color: #4F46E5; 
+        background-color: #055dcf; 
         color: white;
 }
 .styled-table-fh {
@@ -172,11 +161,11 @@ li:hover{
 }
 
 .input-ca{
-    width: 71px; border: 1px solid rgb(215, 215, 215); outline: none; background-color: white;
+    width: 61px; border: 1px solid rgb(215, 215, 215); outline: none; background-color: white;
     text-align: center; border-radius: 4px;
 }
 .input-ca:focus{
-    border: 1px solid #4F46E5;
+    border: 1px solid #055dcf;
 }
 #articleCodeId, #descripcionCodeId{
     text-align: left;
@@ -185,7 +174,7 @@ li:hover{
     background-color: rgb(235, 235, 235);
 }
 .bgadmin{
-    background-color: #4f46e5;
+    background-color: #055dcf;
 }
 .input-ca-ba{
     width: 322px;
@@ -208,7 +197,7 @@ li:hover{
   z-index: 10;
 }
 .color_blue{
-    color:#4f46e5;
+    color:#055dcf;
     text-decoration: underline;
 }
 .color_blue:hover{
@@ -224,7 +213,7 @@ b{
 .input_pal{
     width: 100%;
     border-radius: 3px;
-    border: 1px solid #4f46e5!important;
+    border: 1px solid #055dcf!important;
     text-align: center!important;
 }
 
@@ -232,7 +221,7 @@ b{
 
 * {
   scrollbar-width: thin;                     /* fino */
-  scrollbar-color: #463fd5 transparent;      /* color del thumb y fondo */
+  scrollbar-color: #055dcf  transparent;      /* color del thumb y fondo */
 }
 
 /* WebKit (Chrome, Safari, Edge) */
@@ -246,12 +235,12 @@ b{
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: #463fd5; /* color del thumb */
+  background-color: #055dcf ; /* color del thumb */
   border-radius: 9999px;     /* redondeado */
 }
 
 *::-webkit-scrollbar-thumb:hover {
-  background-color: #463fd5; /* tono un poco más oscuro al pasar el mouse */
+  background-color: #055dcf ; /* tono un poco mÃ¡s oscuro al pasar el mouse */
 }
 
 .expanded{
@@ -281,9 +270,86 @@ b{
 .center_text{
     text-align: center;
 }
-.large_input{
-    width: 333px;
+td, th, tr{
+    font-weight: 900;
 }
-.large_input:focus{
-    border: 1px solid rgb(205, 205, 205);
+th {  
+    border: 1px solid #e5e7eb;        
+}
+.topLeft {
+    border-top-left-radius: 4px!important;
+}
+.topRight {
+    border-top-right-radius: 4px;
+}
+
+/* redondea toda la fila y "corta" los bordes de los th */
+.tr-head-round{
+  border-radius: 4px;
+  overflow: hidden; /* CLAVE */
+}
+
+/* opcional: fuerza el redondeo solo en la celda Familia */
+.th-familia{
+  border-top-left-radius: 4px;
+}
+
+
+/* Contenedor: aquí va el redondeo REAL */
+.table-round{
+  display: inline-block;          /* para que no ocupe todo */
+  border: 1px solid #e5e7eb;      /* borde exterior bonito */
+  border-radius: 4px;            /* ESQUINAS redondas */
+  overflow: hidden;              /* CLAVE: recorta las esquinas */
+}
+
+/* IMPORTANTE: si la tabla tiene border-collapse, mantenlo, pero NO pongas borde en th */
+.table-round table{
+  border-collapse: collapse;
+}
+
+/* quita el borde en TH solo de esa tabla (si no, te cuadrará por dentro) */
+.table-round th{
+  border: 0 !important;
+}
+
+.top_link{
+    background-color: #dcdcdc;
+    padding: 0px 4px 0px 4px;
+    border-radius: 4px;
+    margin-right: 7px;
+    display: inline-block;
+}
+.top_link:hover{
+    color: white;
+    background-color: #04377b;
+}
+.class_blue{
+    color: white;
+    background-color: #055dcf;
+}
+nav{
+    display: block;
+    margin-top: 9px;
+    margin-bottom: 9px;
+    margin-left: 9px;
+    margin-right: 9px;
+}
+main{
+    margin-top: 7px;
+    margin-bottom: 7px;
+    margin-left: 7px;
+    margin-right: 7px;
+}
+
+
+/* Quita las flechas/spinners en Chrome, Edge, Safari */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.yellow_kat{
+    background-color: yellow;
 }
