--- a/assets/css/proyeccion.css
+++ b/assets/css/proyeccion.css
@@ -353,3 +353,7 @@ input[type="number"]::-webkit-inner-spin-button {
 .yellow_kat{
     background-color: yellow;
 }
+
+.boton_restablecer{
+    float: right!important;
+}
