--- a/assets/views/compras-rotativo-salidas-elaboracion.html
+++ b/assets/views/compras-rotativo-salidas-elaboracion.html
@@ -1,8 +1,12 @@
 <div class="w-full mx-auto mb-4 flex justify-between items-center">
-    <span> </span> <span> </span>
+    <span> 
+      <input type="text" value="" class="input-ca input-ca-ba" placeholder="Buscar.." id="searchRSE" oninput="changeSearchedRSE(event)">
+      <span  class="b-top-page" onclick="clickBroomRSE()"> 🧹 </span>
+    </span> <span> </span>
     <h1 class="text-xl text-center">Rotativo Salidas Elaboracion</h1>
+    <span> </span> <span> </span>
     <span>Hasta <input type="date" id="date_to_RSE" onchange="change_date_RSE(event)"></span>
-    <span></span>
+    <span> </span>
 </div>
 <div class="flex flex-col gap-2 text-sm w-full">
     <div>
