--- a/assets/views/logistica-analisis-estado-dvds.html
+++ b/assets/views/logistica-analisis-estado-dvds.html
@@ -1,8 +1,8 @@
 <div class="w-full mx-auto mb-4 flex justify-between items-center">
-    <span></span> 
-    <span>Desde</span><span><input type="date" id="inputFromAED" onchange="changedDateAED()"></span> 
+    <span> </span> 
+    <!-- <span>Desde</span><span><input type="date" id="inputFromAED" onchange="changedDateAED()"></span> --> 
     <h1 class="text-xl text-center">Panel de Análisis de DVDs</h1>
-    <span>Hasta</span><span><input type="date" id="inputToAED" onchange="changedDateAED()"></span>
+    <!-- <span>Hasta</span><span><input type="date" id="inputToAED" onchange="changedDateAED()"></span> -->
     <span> </span>
 </div>
 <div class="flex flex-col gap-2 text-sm w-full">
@@ -27,5 +27,3 @@
 </div>
 <br><br><br><br><br>
 
-Para filtrar las entradas uso el codigo DVD en el programa <b>"Consulta de movimientos"</b> (ejemplo 25ES004811I016L0R2) donde tengo en cuenta codigo 0122L ENTRADA MATERIA TRÁNSITO <br>
-Para filtrar existencias uso programa <b>"Stock detallado propietario"</b> donde filtro por código artículo y lote
