--- a/assets/views/logistica-analisis-estado-dvds.html
+++ b/assets/views/logistica-analisis-estado-dvds.html
@@ -27,3 +27,5 @@
 </div>
 <br><br><br><br><br>
 
+La entrada es por codigo_movimiento in  ('0122L', '01I1L') <br>
+Stock es por consulta de "Stock Detallado Propietario" > Filtros Adifionales > Código DVD
