--- a/assets/views/compras-stock.html
+++ b/assets/views/compras-stock.html
@@ -41,30 +41,13 @@
 </div>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
 <div>
     <div class="bg-white p-2 border ">Informe de stock actual con filtros aplicados: <br>
-        1. Stock en situación DISPG para DISPONIBLE GENERAL, DEPA para DEPÓSITO ADUANERO, FINAL para DESTINO FINAL (CONTINGENTE).<br>
-        2. Familias excluidas: 001 AUXILIARES, 017 GRANELES Y VARIOS. <br>
+        1. Stock Total: Es stock en todas las situaciones <b>menos</b> DEPC (DEPOSITO CLIENTES) y stock almacen 98 (TRANSITOS IMPORTACIONES), 
+            <br> DEPA para DEPÓSITO ADUANERO, 
+            <br> FINAL para DESTINO FINAL (CONTINGENTE).<br>
+        2. Familias excluidas: 001 AUXILIARES, 017 GRANELES Y VARIOS, 013 I+D.<br>
         3. Mercado: 10 NACIONAL, 30 COMPARTIDO. <br>
         4. Tipo material: 010 MATERIA PRIMA, 030 PRODUCTO FABRICADO, 040 PRODUCTO COMERCIAL. <br>
         <br><br>
